Fix the spacing

--- a/css/index.css
+++ b/css/index.css
@@ -10,13 +10,14 @@ label, form button{
 
 div[data-index]{
   display: block;
-  padding: 20px 10px;
+  padding: 20px 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 div[data-index] button{
-  padding: 10px 1px;;
+  padding: 20px 1px;;
   margin-right: 20px;
-  width: 75px;
+  width: 200px;
+  font-size: 1rem;
 }
